# ewlibs

./: CMakeLists.txt  LICENSE_HEADER  README.md  TODO  archive.sh  configure  copyright.txt
app/: CMakeLists.txt
app/eedit/: CMakeLists.txt  design.txt  gen_lines.c  gen_lines.cpp  gen_lines.hs  gen_lines.pl  gen_lines.rs  todo.txt
app/eedit/api/include/: buffer_log.h  byte_buffer.h  codec.h  codepoint_info.h  editor_buffer.h  editor_codec.h  editor_event.h  editor_event_queue.h  editor_export.h  editor_input_event.h  editor_message.h  editor_message_handler.h  editor_module.h  editor_region.h  editor_screen.h  editor_selection.h  editor_types.h  editor_view.h  mark.h  module.h  screen.h  text_codec.h
app/eedit/api/src/: buffer_log.cpp  byte_buffer.cpp  codec.cpp  codepoint_info.cpp  editor_buffer.cpp  editor_event.cpp  editor_event_queue.cpp  editor_input_event.cpp  editor_message_handler.cpp  editor_view.cpp  editor_view_internal.h  handle_table.h  mark.cpp  screen.cpp  text_codec.cpp
app/eedit/application/: application.cpp  application.hpp  editor.cpp  editor.hpp  main.cpp
app/eedit/core/: core.cpp  core.hpp  forward_decl.h  log.cpp  log.hpp  message_queue.hpp  process_event_ctx.cpp  process_event_ctx.h  text_buffer_indexer.hpp  text_layout.cpp  text_layout.hpp  text_page_data.hpp
app/eedit/core/event/: event.hpp  process_event.cpp  process_event_ctx.cpp  process_event_ctx.h
app/eedit/core/filters/: byte_mode.cpp  hex_layout_mode.cpp  mark_filter.cpp  screen_layout.cpp  tab_expansion_layout_mode.cpp  text_decoder.cpp  unicode_layout_mode.cpp
app/eedit/core/input/event/: input_event_map.cpp  input_event_map.hpp
app/eedit/core/log/: log.cpp  log.hpp
app/eedit/core/mode/marks/: marks_mode.cpp
app/eedit/core/mode/text/: text_mode.cpp
app/eedit/core/module/: event_function.h  module.cpp  module.hpp
app/eedit/core/rpc/: rpc.cpp  rpc.hpp
app/eedit/core/text_layout/: layout_filter_io.h  layout_filter_io_vec.cpp  layout_filter_io_vec.h  text_layout.cpp  text_layout.hpp
app/eedit/core/undo/: undo.cpp  undo.h  undo_mode.h
app/eedit/deprecated/: text_buffer.hpp  text_buffer_indexer.cpp  text_page_data.hpp
app/eedit/main/: main.cpp
app/eedit/modules/: CMakeLists.txt  module_noop.cpp  module_text_codec_ascii.cpp
app/eedit/modules/codec/: CMakeLists.txt
app/eedit/modules/codec/text/: CMakeLists.txt  module_text_codec_ascii.cpp
app/eedit/modules/mode/: CMakeLists.txt
app/eedit/modules/mode/marks/: CMakeLists.txt  marks_mode.cpp  marks_mode.h
app/eedit/modules/mode/text/: CMakeLists.txt  text_mode.cpp  text_mode.h  text_mode_deprecated.cpp
app/eedit/test-tools/: gen_lines.c  gen_lines.cpp  gen_lines.go  gen_lines.hs  gen_lines.rs
app/eedit/ui/debug/: debug.cpp  ui.h
app/eedit/ui/ew/: buffer_view.hpp  button_label.hpp  font_utils.hpp  label.hpp  line_number.hpp  main_window.cpp  main_window.hpp  scroll_bar.cpp  scroll_bar.hpp  status_bar.cpp  status_bar.hpp  tab_bar.cpp  tab_bar.hpp  text_view.hpp  ui.cpp  ui.h  widget_layout.hpp
app/eedit/ui/ncurses/: ncurses.cpp  ui.h
cmake/CMakeModules/: FindFreeType.cmake
cmake/ew/audio/: CMakeLists.txt
cmake/ew/codecs/text/unicode/utf8/: CMakeLists.txt
cmake/ew/console/: CMakeLists.txt
cmake/ew/core/device/: CMakeLists.txt
cmake/ew/core/dll/: CMakeLists.txt
cmake/ew/core/exception/: CMakeLists.txt
cmake/ew/core/object/: CMakeLists.txt
cmake/ew/core/program/: CMakeLists.txt
cmake/ew/core/syscall/: CMakeLists.txt
cmake/ew/core/threading/: CMakeLists.txt
cmake/ew/core/time/: CMakeLists.txt
cmake/ew/filesystem/: CMakeLists.txt
cmake/ew/graphics/: CMakeLists.txt
cmake/ew/maths/: CMakeLists.txt
cmake/ew/network/: CMakeLists.txt
cmake/ew/system/: CMakeLists.txt
cmake/example/cat/: CMakeLists.txt
implementation/common/: empty.cpp
implementation/common/maths/: constants.cpp
include/: build_headers.sh
include/ew/: ew_config.hpp
include/ew/audio/: iaudio.hpp
include/ew/console/: console.hpp
include/ew/core/: named_references.hpp
include/ew/filesystem/: file.hpp  mapped_file.hpp
include/ew/graphics/: color.hpp  color.hxx  graphics.hpp  light.hpp  light.hxx  vertex.hpp
include/ew/maths/: constants.hpp  convert.hpp  functions.hpp  maths.hpp  matrix.hpp  matrix.hxx  vector.hpp  vector.hxx
include/ew/network/: connection.hpp  network.hpp
include/ew/system/: system.hpp
playground/: CMakeLists.txt  println.cpp  super_stack.c
playground/base/: Makefile  ew_base_classes.hpp  exception_thrower.cpp  list.cpp  main.cpp  safe_type.cpp
playground/buffer/: CMakeLists.txt  flexible_array_test.cpp  main.cpp
playground/flexible_array/: CMakeLists.txt  do_test.sh  test_main.cpp
playground/gfx/: CMakeLists.txt
playground/gfx/to_sort/: Makefile  test.cpp  test2.cpp
playground/gfx/widget_event/: test.cpp
playground/gfx/widget_factory/: widget_factory.cpp
playground/timer/: CMakeLists.txt  main.cpp  timer.cpp  timer.hpp
playground/unicode/: CMakeLists.txt  unicode_reverse_decode_test.cpp  unicode_test.cpp  utf8.txt
scripts/: format_code.sh  gen_libGLU_symtab_entries.sh  gen_libGLX_symtab_entries.sh  gen_libGL_symtab_entries.sh  gen_libX11_symtab_entries.sh  gen_lib_wrapper.sh  gen_libfreetype2_symtab_entries.sh
test/: CMakeLists.txt
test/ew/core/threading/: CMakeLists.txt  fifo_test.cpp  simple_threads.cpp  simple_threads2.cpp  test_001.cpp  test_002.cpp
test/ew/graphics/: CMakeLists.txt
test/ew/graphics/common/: gears.cpp
test/ew/graphics/gfx_single_thread/: test.cpp
test/ew/graphics/gfx_v01/: test.cpp
test/ew/graphics/gfx_v02/: Makefile.test  test.cpp
test/ew/graphics/gfx_v04/: test.cpp
test/ew/graphics/gfx_v05/: FreeType.cpp  lesson43.cpp  test.cpp
test/ew/graphics/gfx_v06/: FreeType.cpp  lesson43.cpp  test.cpp
test/ew/graphics/gfx_v07/: mymenu.cpp  mymenu.hpp  mywindow.cpp  mywindow.hpp  test.cpp
test/ew/graphics/gfx_v09/: mymenu.cpp  mymenu.hpp  mywindow.cpp  mywindow.hpp  test.cpp
test/ew/network/: CMakeLists.txt
test/ew/network/connection/: byte_stream.hpp  client.cpp  server.cpp  tftp.cpp  tftp.hpp
test/example/: cat.cpp
(+186 files in other folders)
